<resources>
    <string name="app_name">ComicExchange</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">WELCOME</string>
    <string name="go_button">Go!</string>
    <string name="SignIn_button">Sign in</string>
    <string name="explorer_news">News</string>
    <string name="explorer_favoris">Favorites</string>
    <string name="explorer_search">Search</string>
    <string name="title_activity_explorer_test">activity_explorer_test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="SignIn_Link"><u>Sign In</u></string>
    <string name="latest_upload">Latest upload</string>

    <!-- String pour layout de details-->
    <string name="Detail_comic">Details of art. </string>
    <string name="Details_series">Serie: </string>
    <string name="Detail_title">Title: </string>
    <string name="Detail_number">Number: </string>
    <string name="Detail_owner">Owner: </string>
    <string name="Detail_synopsis">Synopsis:</string>
    <string name="Detail_language">Language:</string>
    <string name="Detail_Author">Author: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="exchange_title">I exchange</string>
    <string name="email_used_as_login">Email</string>
    <string name="set_a_password">Set a password</string>
    <string name="settings_language">Language</string>
    <string name="settings_username">Username</string>
    <string name="settings_email">Email</string>
    <string name="language_english">English</string>
    <string name="language_french">Français</string>
    <string name="language_german">Deutsch</string>
    <string name="username">Username</string>
    <string name="Detail_ownerDetail">Owner details:</string>
    <string name="UserCreated">New user created</string>
    <string name="wrongLogin">wrong</string>
    <string name="UsernameUsed">alreadyUsed</string>
    <string name="emailUsed">alreadyUsedEmail</string>
    <string name="SettingsChanged">SettingsChanged</string>
    <string name="add_serie">Serie</string>
    <string name="add_title">Title</string>
    <string name="add_number">Number</string>
    <string name="add_author">Author</string>
    <string name="add_synopsis">Synopsis</string>
    <string name="add_language">Language</string>
    <string name="newcomicsaved">New comic saved</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="selectedcomicid">SelectedComicId</string>
    <string name="details">Details</string>
    <string name="editSaved">Edit saved</string>
    <string name="currentUserId">currentUserId</string>
    <string name="currentUserIdFromSettings">currentUserIdFromSettings</string>
    <string name="iExchange">I exchange</string>
    <string name="noComics">No comics</string>
    <string name="news">News</string>
    <string name="search">Search</string>
    <string name="settingsSaved">Settings saved</string>
    <string name="settings">Settings</string>
    <string name="searchComics">Search comics...</string>
    <string name="infosFiled">infoFiled</string>
    <string name="SuppressionUser">Suppress</string>
    <string name="loading">Loading...</string>
    <string name="description">desc</string>
</resources>
