<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.comicsexchange_new.ExchangeAddFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TitreDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/Detail_comic"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18dp"
            android:layout_column="0"
            android:layout_row="0"/>

        <EditImage
            android:id="@+id/imageView"
            android:layout_width="137dp"
            android:layout_height="172dp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_rowSpan="5"/>

        <TextView
            android:id="@+id/Serie_Titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:text="@string/Details_series"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/Serie_view"
            android:hint="@string/add_serie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/Title_Titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:text="@string/Detail_title"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/Title_view"
            android:hint="@string/add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/Number_Titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_row="3"
            android:text="@string/Detail_number"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/Number_view"
            android:hint="@string/add_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_row="3"
            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/Owner_Titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_row="4"
            android:text="@string/Detail_owner"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/Owner_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_row="4"
            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/Author_Titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_row="5"
            android:text="@string/Detail_Author"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/Author_view"
            android:hint="@string/add_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="3"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_row="5"
            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/Sysnopsis_Titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_row="6"
            android:text="@string/Detail_synopsis"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/Synopsis_view"
            android:hint="@string/add_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_row="7"
            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/Language_Titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_row="8"
            android:text="@string/Detail_language"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/language_view"
            android:hint="@string/add_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_row="9"
            android:textColor="@android:color/black"
            android:textSize="14dp" />


    </GridLayout>


</FrameLayout>
