<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.comicsexchange_new.SettingsFragment">


    <LinearLayout
        android:layout_width="140dp"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/settings_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="70dp"
            android:text="@string/settings_language"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="70dp"
            android:text="@string/settings_username"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="70dp"
            android:text="@string/email"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="70dp"
            android:text="@string/password"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="Sandy" />

        <EditText
            android:id="@+id/settings_username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Sandy"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/settings_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="sandy@gmail.com"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/settings_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="MyPassword"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp" />

    </LinearLayout>
</FrameLayout>
