<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    tools:context="com.example.comicsexchange_new.SignInActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- Pour la navigation, il faut définir les id des boutons qu'on veut (ici: buttonConnect)
    il faut egalement definir android:onClick pour pouvoir utiliser le listener-->

    <Button
        android:id="@+id/button_Sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/SignIn_button"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="@android:color/holo_orange_light"
        android:onClick="SignCompleted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:fontFamily="serif-monospace"
        android:text="@string/SignIn_button"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="46sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="136dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/UsernameSignIn"
        app:layout_constraintVertical_bias="0.241"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/UsernameSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/settings_username"
        android:textColor="@android:color/black"
        android:inputType="textPersonName"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/Sign_in_Password"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.497" />

    <EditText
        android:id="@+id/EmailSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/Sign_in_Password"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/Sign_in_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:textColor="@android:color/black"
        android:hint="@string/set_a_password"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="208dp" />

    <!-- Empty TextView to avoid focus by default on the first EditText of the frame-->
    <AutoCompleteTextView android:id="@+id/autotext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:nextFocusUp="@id/autotext"
        android:nextFocusLeft="@id/autotext"
        android:focusable="false"/>

</android.support.constraint.ConstraintLayout>
